--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.9.1",
+    "@relaycc/receiver": "^0.1.53",
     "@tableland/sdk": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uauth/js": "^2.4.0",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.2",
     "ethers": "^5.6.9",
+    "graphql": "^16.6.0",
     "ipfs-http-client": "^57.0.3",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
